@@ -84,7 +84,7 @@ class TweetEntry(object):
         return text
 
     def _get_protected_icon(self, attribute):
-        return attribute and attribute != 'false'
+        return True if attribute and attribute != 'false' else ''
 
     def _decode_source_html_entities(self, source_html):
         source_html = unescape(source_html)
