@@ -1,0 +1,3 @@
+<a href='http://twitter.com/$retweet_by'>
+  <img title='$title' src='retweet.png' width='18' height='14'>
+</a>
